fix sidebar wrap

--- a/app/assets/css/yeoman.css
+++ b/app/assets/css/yeoman.css
@@ -142,7 +142,6 @@ nav ul {
 }
 
 nav ul li {
-  white-space: nowrap;
   line-height: 21px;
   padding-top: 2px;
   padding-bottom: 2px;
